@@ -1,2 +1,2 @@
-bin_SCRIPTS=generate_ncvars.py f90_dependencies.py glimmer_profile.py
+bin_SCRIPTS=generate_ncvars.py f90_dependencies.py glimmer_profile.py glide_launch.py
 EXTRA_DIST = $(bin_SCRIPTS)
